Remove wrapping div to fix split button second line

--- a/app/assets/stylesheets/geoblacklight/modules/toolbar.scss
+++ b/app/assets/stylesheets/geoblacklight/modules/toolbar.scss
@@ -32,4 +32,8 @@
     text-align: center;
     width: 1.4em;
   }
+
+  .downloads {
+    padding-top: 15px;
+  }
 }
